lda/lda-front-prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lda-front-prod
  namespace: rbx
spec:
  selector:
    matchLabels:
      app: lda-front-prod
  template:
    metadata:
      labels:
        app: lda-front-prod
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3408"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: lda-front-prod
          image: ldamasio/lda-front:latest
          ports:
          - containerPort: 3000
          resources:
            requests:
              memory: "200Mi"
              cpu: "500m"
            limits:
              memory: "200Mi"
              cpu: "1000m"
