lda/lda-front-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: lda-front-prod-svc
spec:
  selector:
    app: lda-front-prod-deploy
  ports:
    - port: 80
      targetPort: 3408
  type: LoadBalancer
