lda/lda-front-prod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lda-front-prod-ingress
  annotations:
    cert-manager.io/cluster-issuer: "lda-front-prod-clusterissuer"
    spec.ingressClassName: "public"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: "public"
  tls:
    - hosts:
      - www.leandrodamasio.com
      secretName: lda-front-prod-secret
  rules:
  - host: www.leandrodamasio.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: lda-front-prod-svc
            port:
              number: 80
